fix version bug