@@ -262,7 +262,7 @@ public class main {
             }
         }
 
-        String traversal = inputs.getLast();
+        String traversal = inputs.get(inputs.size() - 1);
         if (tree.root == null) {
             System.out.println("EMPTY");
         } else {
